data/derived/fa15/progs/unify/prog0981.ml.out
Characters 144-161:
  | Sine e1              -> "sin ("^^(3.142 *. (exprToString e1))^^")"
                                               ^^^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         float
